--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>About-page</title>
+  <title>AFYA CARE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
@@ -12,6 +12,23 @@
 
 </head>
 <body>
+<img src="img/afyacare.jpg" alt="A logo for afyacenter"
+  <h1>About Us</h1>
+   <p>Afya care is a website that helps anybody who is on medication to make sure that they take there medicine on time and
+  guarantees you to finish your dosage .
+  Afya center is a new website that will help many and ensure one has a better and healthy life.</p>
+
+  <h1>What we do </h1>
+  <p>Afya care is a website that is programmed to help users on medication to take their medicine on time.
+     For example, I am to take my
+  medication at 1.00 pm the the programme will know the time and remind me 5 minutes earlier that is 12.55 pm.
+   Isn't that great ?
+
+  And wouldn't it even be better if it reminds you your appointment with your doctor ?
+   Yep it will remind you to your doctor's appointment
+  a day before.
+
+  Our website will show you the kind of reactions one will have when a  certain medication it takes, the allergies or the side effects</p>
 
 </body>
 </html>
