dropdown button features

--- a/landing-page.html
+++ b/landing-page.html
@@ -11,6 +11,19 @@
  <title>Landing Page</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Afya Care</h1>
+    <div class="dropbtn">
+      <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <a href="#">galash mgonjwa</a>
+        </div>
+      </div>
+      
+    </div>
+
+  </div>
   
 </body>
 </html>
