--- a/landing-page.html
+++ b/landing-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,15 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
- <title>Landing Page</title>
+  <title>Landing Page</title>
 </head>
+
 <body>
+  <style>
+    body {
+      background-image: url("images/download.jpg")
+    }
+  </style>
   <div class="container">
     <h1>Afya Care</h1>
     <div class="dropbtn">
@@ -20,10 +27,11 @@
           <a href="#">galash mgonjwa</a>
         </div>
       </div>
-      
+
     </div>
 
   </div>
-  
+
 </body>
+
 </html>
