--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -14,13 +14,12 @@
 </head>
 
 <body>
-  <h1>Thank you for choosing Afya Care.If you wish to join this family please sign up below</h1>
+  <h1>Thank you for choosing Afya Care.If you wish to join this family please sign up below:</h1>
 
   <body>
 
-    <h2>Afya Care Sign Up</h2>
-
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
+    <button class="buttonz" onclick="document.getElementById('id01').style.display='block'"
+      style="width:auto; ">Welcome</button>
 
     <div id="id01" class="modal">
       <span onclick="document.getElementById('id01').style.display='none'" class="close"
@@ -40,12 +39,13 @@
 
           <label>
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me</label>
-            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+          <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-      <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
-      </div>
+          <div class="clearfix">
+            <button type="button" onclick="document.getElementById('id01').style.display='none'"
+              class="cancelbtn">Cancel</button>
+            <button type="submit" class="signupbtn">Sign Up</button>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
-</div>
