cards on common diseases

--- a/landing-page.html
+++ b/landing-page.html
@@ -37,32 +37,115 @@
           </ul>
         </div>
       </div>
-      <span style="font-size:15px;cursor:pointer;float:right" onclick="openNav()">&#9776; open</span>
+      <span style="font-size:30px;cursor:pointer;float:right;color:white;" onclick="openNav()">&#9776;</span>
     </div>
   </div>
   <div class="container">
-    <h2 style="text-align:center">ANTIBIOTICS</h2>
-    <div class="card">
-      <img src="/w3images/jeans3.jpg" alt="antibiotic" style="width:100%">
-      <h1>Tailored Jeans</h1>
-      <p class="price">$19.99</p>
-      <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-      <p><button>Add to Cart</button></p>
-    </div>
-  </div>
-  <div class="container">
-    <div class="footer">
-      <div class="card">
-        <img src="img.jpg" alt="logo" style="width:100%">
-        <h1>Afya Care</h1>
-        <p class="title">CEO & Founder, Galaano Suleiman</p>
-        <p>Moringa School.</p>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-gmail"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <p><button>Contact</button></p>
+    <div class="row">
+      <div class="col-md-4">
+        <h2 style="text-align:center">ANTIBIOTICS</h2>
+        <div class="card">
+          <img src="images/antibiotics.jpg" alt="antibiotic" style="width:100%">
+          <h1>Antibiotics</h1>
+          <p>what you should know about antibiotics</p>
+          <br>
+          <br>
+          <br>
+          <p><button>Read more</button></p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <h2 style="text-align:center">PAINKILLERS</h2>
+        <div class="card">
+          <img src="images/painkillers.jpg" alt="painkillers" style="width:100%">
+          <h2>Painkillers</h2>
+          <p>Painkillers are a very common drug among people usually found in every</p>
+          <br>
+          <p><button>Read more</button></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <h2 style="text-align: center">DEPRESSANTS</h2>
+        <div class="card">
+          <img src="images/depressants.jpg" alt="depressants" style="width:100%">
+          <h2>Depressants</h2>
+          <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
+          <br>
+          <br>
+          <br>
+          <br>
+          <p><button>Read more</button></p>
+        </div>
       </div>
     </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-md-4">
+      <h1 style="text-align: center">ANTI MALARIAL TABLETS</h1>
+      <div class="card">
+        <img src="images/antimalarial.jpg" alt="malaria" style="width:100%">
+        <h2>Antimalarial Pills</h2>
+        <p>Maliria is a very commom and dangerous disease mainly caused by the female mosquitos</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p><button>Read more</button></p>
+      </div>
+    </div>  
+      <div class="col-md-4">
+        <h1 style="text-align: center">CONTRACEPTIVES</h1>
+        <br>
+        <div class="card">
+          <img src="images/contraceptives.jpg" alt="sex" style="width:100%">
+          <h2>depressants</h2>
+          <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
+          <br>
+          <br>
+          <br>
+          <br>
+          <p><button>Read more</button></p>
+        </div>
+      </div>  
+        <div class="col-md-4">
+          <h1 style="text-align: center"></h1>
+          <div class="card">
+            <img src="images/depressants.jpg" alt="depressants" style="width:100%">
+            <h2>depressants</h2>
+            <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p><button>Read more</button></p>
+          </div>
+        </div>
+  </div>      
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="container">
+          <div class="footr">
+            <div class="card">
+              <img src="img.jpg" alt="logo" style="width:100%">
+              <h1>Afya Care</h1>
+              <p class="title">CEO & Founder, Galaano Suleiman</p>
+              <p>Moringa School.</p>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-gmail"></i></a>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <p><button>Contact</button></p>
+            </div>
+          </div>
 </body>
 
 </html>
