cards on common diseases the flu

--- a/landing-page.html
+++ b/landing-page.html
@@ -98,54 +98,55 @@
         <br>
         <p><button>Read more</button></p>
       </div>
-    </div>  
-      <div class="col-md-4">
-        <h1 style="text-align: center">CONTRACEPTIVES</h1>
-        <br>
-        <div class="card">
-          <img src="images/contraceptives.jpg" alt="sex" style="width:100%">
-          <h2>depressants</h2>
-          <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
-          <br>
-          <br>
-          <br>
-          <br>
-          <p><button>Read more</button></p>
-        </div>
-      </div>  
-        <div class="col-md-4">
-          <h1 style="text-align: center"></h1>
-          <div class="card">
-            <img src="images/depressants.jpg" alt="depressants" style="width:100%">
-            <h2>depressants</h2>
-            <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p><button>Read more</button></p>
-          </div>
-        </div>
-  </div>      
+    </div>
+    <div class="col-md-4">
+      <h1 style="text-align: center">CONTRACEPTIVES</h1>
+      <br>
+      <div class="card">
+        <img src="images/contraceptives.jpg" alt="sex" style="width:100%">
+        <h2>depressants</h2>
+        <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
         <br>
         <br>
         <br>
         <br>
+        <p><button>Read more</button></p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h1 style="text-align: center">THE FLU</h1>
+      <br>
+      <div class="card">
+        <img src="images/flu.jpg" alt="depressants" style="width:100%">
+        <h2>The flu</h2>
+        <p>One of the most common diseases by most. and very infective</p>
         <br>
         <br>
-        <div class="container">
-          <div class="footr">
-            <div class="card">
-              <img src="img.jpg" alt="logo" style="width:100%">
-              <h1>Afya Care</h1>
-              <p class="title">CEO & Founder, Galaano Suleiman</p>
-              <p>Moringa School.</p>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-gmail"></i></a>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <p><button>Contact</button></p>
-            </div>
-          </div>
+        <br>
+        <br>
+        <p><button>Read more</button></p>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="container">
+    <div class="footr">
+      <div class="card">
+        <img src="img.jpg" alt="logo" style="width:100%">
+        <h1>Afya Care</h1>
+        <p class="title">CEO & Founder, Galaano Suleiman</p>
+        <p>Moringa School.</p>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-gmail"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p><button>Contact</button></p>
+      </div>
+    </div>
 </body>
 
 </html>
