added all changes

--- a/about.html
+++ b/about.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>AFYA CARE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Jura" rel="stylesheet">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
 
 </head>
+
 <body>
-<img src="img/afyacare.jpg" alt="A logo for afyacenter"
-  <h1>About Us</h1>
-   <p>Afya care is a website that helps anybody who is on medication to make sure that they take there medicine on time and
-  guarantees you to finish your dosage .
-  Afya center is a new website that will help many and ensure one has a better and healthy life.</p>
+  <div class="container">
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col-xs-6 col-md-4">
+        <img class="img-circle" id="logo" src="img/AFYALogo.jpg" alt="logo">
+      </div>
+      <div class="col-xs-12 col-md-8">
+        <h1>Afya Care</h1>
+      </div>
+      <div class="col-md-4">
 
-  <h1>What we do </h1>
-  <p>Afya care is a website that is programmed to help users on medication to take their medicine on time.
-     For example, I am to take my
-  medication at 1.00 pm the the programme will know the time and remind me 5 minutes earlier that is 12.55 pm.
-   Isn't that great ?
+      </div>
+    </div>
+    <br>
+    <br>
+    <h2>About Us</h2>
+    <br>
+    <br>
+    <span><img class="images" src="img/online simu.png" alt="screen" href="css/styles.css"></span>
+    <p>Afya care is a website that helps anybody who is on medication to make sure that they take there medicine on time and
+      guarantees you to finish your dosage .
+      Afya center is a new website that will help many and ensure one has a better and healthy life.</p>
 
-  And wouldn't it even be better if it reminds you your appointment with your doctor ?
-   Yep it will remind you to your doctor's appointment
-  a day before.
+    <h2>What we do </h2>
+    <span><img class="images" src="img/medisafe.png" alt="screen" href="css/styles.css"></span>
+    <p>Afya care is a website that is programmed to help users on medication to take their medicine on time.
+      For example, I am to take my
+      medication at 1.00 pm the the programme will know the time and remind me 5 minutes earlier that is 12.55 pm.
+      Isn't that great ?
 
-  Our website will show you the kind of reactions one will have when a  certain medication it takes, the allergies or the side effects</p>
+      And wouldn't it even be better if it reminds you your appointment with your doctor ?
+      Yep it will remind you to your doctor's appointment
+      a day before.
+
+      Our website will show you the kind of reactions one will have when a certain medication it takes, the allergies or the side effects</p>
+    <div class="row">
+      <div class="col-md-4">
+        <img class="triple" src="img/online.jpg" alt="">
+
+      </div>
+      <div class="col-md-4">
+        <img class="triple" src="img/alert.jpg" alt="">
+
+      </div>
+      <div class="col-md-4">
+        <img class="triple" src="img/meds.jpg" alt="">
+
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <p>Already have an account ? If no create an account and sign up. If yes sign in.</p>
+    <br>
+    <br>
+    <button onclick="document.getElementById('login').style.display='block'">sign in</button>
+  </div>
 
 </body>
+
 </html>
