--- a/login.html
+++ b/login.html
@@ -4,35 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
-        <script src="js/jquery-3.3.1 (1).js"></script>
-         <script src="js/scripts.js"></script>
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+      <script src="js/jquery-3.3.1.js"></script>
+      <script src="js/scripts.js"></script>
+
 
     <title></title>
   </head>
   <body>
-    <button onclick="document.getElementById('log1').style.display='block'">Login</button>
+
+ <button onclick="document.getElementById('login1').style.display='block'">sign in</button>
 
 
+ <div id="login1" class="modal">
+   <span onclick="document.getElementById('login1').style.display='none'"
+ class="close" title="Close Modal">&times;</span>
 
-    <div id="log1" class="modal">
-  <span onclick="document.getElementById('log1').style.display='none'"
-    class="close" title="Close Modal">&times;</span>
 
-    <div class="container">
-     <label for="sname"><b>Username</b></label>
-     <input type="text" placeholder="Enter Username" name="sname" required>
+   <form class="modal-content animate" action="landing-page.html">
 
-        <label for="passw"><b>Password</b></label>
-        <input type="text" placeholder="Enter password" name="passw" required>
 
-        <button type="submit">Login</button>
-        <label>
-          <input type="checkbox" checked="checked" name="remember">
-           Remember me
-           </label>
-           </div>
+     <div class="container">
+       <label  for="sname"><b>Username</b> <i class="fas fa-user"></i></label>
+       <input type="text" placeholder="Enter Username" name="sname" required>
+
+       <label for="passw"><b>Password</b> <i class="fab fa-keycdn"></i></label>
+       <input type="password" placeholder="Enter Password" name="passw" required>
+
+       <button type="submit">Login</button>
+       <label>
+         <input type="checkbox" checked="checked" name="remember"> Remember me
+       </label>
+
+       <br>
+
+         <button type="button" onclick="document.getElementById('login1').style.display='none'" class="cancelbtn">Cancel</button>
+       </div>
+     </div>
+
+   </form>
+   </div>
+  </div>
+
 
 
 
