--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
 
