--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Jura" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Buenard" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
 
@@ -37,13 +39,158 @@
     <h2>About Us</h2>
     <br>
     <br>
-    <span><img class="images" src="img/online simu.png" alt="screen" href="css/styles.css"></span>
+
+    <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: black;
+  background-color: white;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.toggle {
+  -webkit-animation-name: toggle;
+  -webkit-animation-duration: 1.5s;
+  animation-name: toggle;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes toggle {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes toggle{
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+</style>
+</head>
+<body>
+
+
+<div class="slideshow-container">
+
+<div class="mySlides toggle">
+  <div class="numbertext">1 / 3</div>
+  <img src="img/afyaa_wide.jpg" style="width:100%">
+  <div class="text">We value your health</div>
+</div>
+
+<div class="mySlides toggle">
+  <div class="numbertext">2 / 3</div>
+  <img src="img/onlinesimu_wide.jpg" style="width:100%">
+  <div class="text">Take your meds on time</div>
+</div>
+
+<div class="mySlides toggle">
+  <div class="numbertext">3 / 3</div>
+  <img src="img/takin_wide.jpg" style="width:100%">
+  <div class="text">Stay healthy</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
+</body>
+</html>
+
+    <br>
+
+
+
     <p>Afya care is a website that helps anybody who is on medication to make sure that they take there medicine on time and
       guarantees you to finish your dosage .
       Afya center is a new website that will help many and ensure one has a better and healthy life.</p>
-
+<br>
+<br>
+<br>
     <h2>What we do </h2>
     <span><img class="images" src="img/medisafe.png" alt="screen" href="css/styles.css"></span>
+    <br>
+    <br>
+    <br>
+
     <p>Afya care is a website that is programmed to help users on medication to take their medicine on time.
       For example, I am to take my
       medication at 1.00 pm the the programme will know the time and remind me 5 minutes earlier that is 12.55 pm.
@@ -54,6 +201,10 @@
       a day before.
 
       Our website will show you the kind of reactions one will have when a certain medication it takes, the allergies or the side effects</p>
+      <br>
+      <br>
+      <br>
+
     <div class="row">
       <div class="col-md-4">
         <img class="triple" src="img/online.jpg" alt="">
