--- a/about.html
+++ b/about.html
@@ -94,12 +94,13 @@ img {vertical-align: middle;}
   background-color: #717171;
 }
 
-/* Fading animation */
+/* toggle animation */
 .toggle {
   -webkit-animation-name: toggle;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 5s;
   animation-name: toggle;
   animation-duration: 1.5s;
+
 }
 
 @-webkit-keyframes toggle {
