--- a/landing-page.html
+++ b/landing-page.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <<link href="https://fonts.googleapis.com/css?family=Cinzel|Dancing+Script|Economica|Jua|Merienda" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+  <link rel="stylesheet" href="m-css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel|Dancing+Script|Economica|Jua|Merienda" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" media="screen" href="m-css/styles.css">
   
   <script src="js/jquery-3.3.1.js"></script>
   <script src="js/scripts.js"></script>
@@ -17,7 +17,7 @@
 <body>
   <style>
     .img {
-      background-image: url("images/USTC-AFYA.jpg")
+      background-image: url("m-images/USTC-AFYA.jpg")
     }
   </style>
   <div class="img">
@@ -78,7 +78,7 @@
       <div class="col-xs-4">
         <h1 style="text-align:center; color: azure; font-family: 'Merienda', cursive;">ANTIBIOTICS</h1>
         <div class="card">
-          <img src="images/antibiotics.jpg" alt="antibiotic" style="width:100%">
+          <img src="m-images/antibiotics.jpg" alt="antibiotic" style="width:100%">
           <h1 class="color">Antibiotics</h1>
           <p>what you should know about antibiotics</p>
           <br>
@@ -129,7 +129,7 @@
       <div class="col-xs-4">
         <h2 style="text-align:center; color: azure; font-family: 'Merienda', cursive;">PAINKILLERS</h2>
         <div class="card">
-          <img src="images/painkillers.jpg" alt="painkillers" style="width:100%">
+          <img src="m-images/painkillers.jpg" alt="painkillers" style="width:100%">
           <h1 class="pain">Painkillers</h1>
           <p>Painkillers are a very common drug among people usually found in every</p>
           <br>
@@ -164,7 +164,7 @@
       <div class="col-xs-4">
         <h2 style="text-align: center; color: azure; font-family: 'Merienda', cursive;">DEPRESSANTS</h2>
         <div class="card">
-          <img src="images/depressants.jpg" alt="depressants" style="width:100%">
+          <img src="m-images/depressants.jpg" alt="depressants" style="width:100%">
           <h1>Depressants</h1>
           <p>Depressants are a commonly abused drugs by many people due to personal issues</p>
           <br>
@@ -214,7 +214,7 @@
     <div class="col-xs-4">
       <h1 style="text-align: center; color: azure;font-family: 'Merienda', cursive;">ANTI MALARIAL TABLETS</h1>
       <div class="card">
-        <img src="images/antimalarial.jpg" alt="malaria" style="width:100%">
+        <img src="m-images/antimalarial.jpg" alt="malaria" style="width:100%">
         <h2>Antimalarial Pills</h2>
         <p>Maliria is a very commom and dangerous disease mainly caused by the female mosquitos</p>
         <br>
@@ -259,7 +259,7 @@
       <br>
       <br>
       <div class="card">
-        <img src="images/contraceptives.jpg" alt="sex" style="width:100%">
+        <img src="m-images/contraceptives.jpg" alt="sex" style="width:100%">
         <h2>Contraceptives</h2>
         <p>One of the most used medications to avoid unwanted pregnancies or sexual diseases</p>
         <br>
@@ -299,7 +299,7 @@
       <br>
       <br>
       <div class="card">
-        <img src="images/flu.jpg" alt="the-flu" style="width:100%">
+        <img src="m-images/flu.jpg" alt="the-flu" style="width:100%">
         <h2>The flu</h2>
         <p>One of the most common diseases by most. and very infective</p>
         <br>
@@ -335,7 +335,7 @@
   <div class="container">
     <div class="footr">
       <div class="card">
-        <img class="logof" src="images/afyacare.jpg" alt="logo" style="width:100%">
+        <img class="logof" src="m-images/afyacare.jpg" alt="logo" style="width:100%">
         <h1>Afya Care</h1>
         <br>
         <br>
