add all changes

--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>AFYA CARE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+  <link rel="stylesheet" href="a-css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="a-css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Buenard" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
-  <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="a-js/jquery-3.3.1.js"></script>
+  <script src="a-js/scripts.js"></script>
 
 </head>
 
@@ -25,7 +25,7 @@
     <br>
     <div class="row">
       <div class="col-xs-6 col-md-4">
-        <img class="img-circle" id="logo" src="img/AFYALogo.jpg" alt="logo">
+        <img class="img-circle" id="logo" src="a-img/AFYALogo.jpg" alt="logo">
       </div>
       <div class="col-xs-12 col-md-8">
         <h1>Afya Care</h1>
@@ -36,7 +36,7 @@
     </div>
     <br>
     <br>
-    <h2>About Us</h2>
+    <h2><u>About Us</u></h2>
     <br>
     <br>
 
@@ -126,19 +126,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides toggle">
   <div class="numbertext">1 / 3</div>
-  <img src="img/afyaa_wide.jpg" style="width:100%">
+  <img src="a-img/afyaa_wide.jpg" style="width:100%">
   <div class="text">We value your health</div>
 </div>
 
 <div class="mySlides toggle">
   <div class="numbertext">2 / 3</div>
-  <img src="img/onlinesimu_wide.jpg" style="width:100%">
+  <img src="a-img/onlinesimu_wide.jpg" style="width:100%">
   <div class="text">Take your meds on time</div>
 </div>
 
 <div class="mySlides toggle">
   <div class="numbertext">3 / 3</div>
-  <img src="img/takin_wide.jpg" style="width:100%">
+  <img src="a-img/takin_wide.jpg" style="width:100%">
   <div class="text">Stay healthy</div>
 </div>
 
@@ -186,8 +186,8 @@ function showSlides() {
 <br>
 <br>
 <br>
-    <h2>What we do </h2>
-    <span><img class="images" src="img/medisafe.png" alt="screen" href="css/styles.css"></span>
+    <h2>What we do</h2>
+    <span><img class="images" src="a-img/medisafe.png" alt="screen" href="a-css/styles.css"></span>
     <br>
     <br>
     <br>
@@ -208,15 +208,15 @@ function showSlides() {
 
     <div class="row">
       <div class="col-md-4">
-        <img class="triple" src="img/online.jpg" alt="">
+        <img class="triple" src="a-img/online.jpg" alt="">
 
       </div>
       <div class="col-md-4">
-        <img class="triple" src="img/alert.jpg" alt="">
+        <img class="triple" src="a-img/alert.jpg" alt="">
 
       </div>
       <div class="col-md-4">
-        <img class="triple" src="img/meds.jpg" alt="">
+        <img class="triple" src="a-img/meds.jpg" alt="">
 
       </div>
     </div>
