--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -24,10 +24,10 @@
         <label for="email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" required>
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input type="password" placeholder="Enter Password" id="psw" required>
 
         <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <input type="password" placeholder="Repeat Password" id="psw-repeat" required>
 
         <label>
           <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me</label>
@@ -36,7 +36,7 @@
         <div class="clearfix">
           <button type="button" onclick="document.getElementById('id01').style.display='none'"
             class="cancelbtn">Cancel</button>
-          <button type="submit" class="signupbtn">Sign Up</button>
+          <button type="submit" class="signupbtn" onclick="return Validate()">Sign Up</button>
 
         </div>
       </div>
