--- a/landing-page.html
+++ b/landing-page.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="m-css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Cinzel|Dancing+Script|Economica|Jua|Merienda" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="m-css/styles.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="m-css/styles-m.css">
 
   <script src="m-js/jquery-3.3.1.js"></script>
-  <script src="m-js/scripts.js"></script>
+  <script src="m-js/scripts-m.js"></script>
   <title>Landing Page</title>
 </head>
 
