--- a/login.html
+++ b/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen">
-      <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
+      <link rel="stylesheet" type="text/css" media="screen" href="css/stylesl.css">
         <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
       <script src="js/jquery-3.3.1.js"></script>
-      <script src="js/scripts.js"></script>
+      <script src="l-js/scriptsl.js"></script>
 
 
     <title></title>
@@ -37,7 +37,7 @@
        <button type="submit">Login</button>
 
        <br>
-       
+
        <label>
          <span id="rem">
          <input type="checkbox" checked="checked" name="remember"><b>Remember me</b>
@@ -46,7 +46,7 @@
 
        <br>
 
-         <button type="button" onclick="document.getElementById('login1').style.display='none'" class="cancelbtn">Cancel</button>
+
        </div>
      </div>
 
