--- a/landing-page.html
+++ b/landing-page.html
@@ -28,7 +28,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
           <ul>
-            <li><a href="#timetable">Timetable</a></li>
+            <li><a href="timetable.html">Timetable</a></li>
             <li><a href="#help">How it works</a></li>
             <li class="dropdown">
               <a href="javascript:void(0)" class="dropbtn">Accounts</a>
@@ -360,8 +360,8 @@
           <div class="flip-card-back">
             <h1 style="font-size: 40px;">Afya Care</h1>
             <br>
-            
-            
+
+
             <p>Enabling your wellness</p>
             <br>
             <br>
